# utquery

./: .gitignore  CMakeLists.txt  CMakePresets.json  PKGBUILD  README.md  servers.json  vcpkg.json
src/: app.cpp  app.h  icon_data.h  main.cpp  master.cpp  master.h  md5.h  query.cpp  query.h  utcolor.h
